omni/tests/goldens/types/undefined_ident_17.err
tests/goldens/types/undefined_ident_17.omni:1:20: error: undefined identifier "missing17"
  let result17:int = missing17
                     ^~~ hint: declare the variable with 'let missing17: <type> = <value>' or 'var missing17: <type> = <value>' before using it
